# OS_DEV

./: .gitignore  ArchitectingIsolatedSystems.md  BuildingAnOS.md  README.md
ARIOS/: Cargo.toml  Makefile
ARIOS/src/: boot.asm  grub.cfg  lib.rs  long_mode_start.asm  multiboot_header.asm
CPPMOS/: Makefile
CPPMOS/doc/: ArchitectingIsolatedSystems.md  BuildingAnOS.md  OSDesign.md
CPPMOS/include/: gdt.h
CPPMOS/src/: interrupts.cpp  kernel.cpp  keyboard.cpp  loader.s
DOC/: ArchitectingAnOsGuide.md
MYOS/: Makefile  README.md  bootloader.nasm
MYOS/AssembleyTryOutFiles/: Makefile  bootsector.nasm  diskloader.nasm  functions.nasm  functions32bit.nasm  gdt.nasm  kernel.c  osimage  switch32bit.nasm
MYOS/newOS/: Makefile  README.md  linker.ld
MYOS/newOS/iso/boot/grub/: grub.cfg
MYOS/newOS/src/: io.s  kmain.c  loader.nasm  loader.s
doc/: ArchitectingAnOS.md
include/: port.h  types.h
src/: GDT.cpp  GDT.h  Makefile  gdt.cpp  kernel.cpp  linker.ld  port.cpp  port.h
